retrieveUnpackaged/objects/US_Account_Target_Program__c.object
<CustomObject>
    <description>US SAP Program Target Levels</description>
    <fields>
        <fullName>Account_Target_Program__c</fullName>
        <formula>Account__r.Name&amp;&quot; &quot;&amp; Target_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Target Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Target Programs</relationshipLabel>
        <relationshipName>Account_Target_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Achieved_Targets__c</fullName>
        <label>Achieved Targets</label>
        <summaryFilterItems>
            <field>US_Account_Target__c.Complete__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>US_Account_Target__c.Account_Target_Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <label>Brand Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Red_Flags__c</fullName>
        <inlineHelpText>How many targets have a Red Flag?</inlineHelpText>
        <label>Count of Red Flags</label>
        <summaryFilterItems>
            <field>US_Account_Target__c.Acheivement_Score__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>US_Account_Target__c.Account_Target_Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Yellow_Flags__c</fullName>
        <inlineHelpText>How many Yellow Flags does this Account have for this program?</inlineHelpText>
        <label>Count of Yellow Flags</label>
        <summaryFilterItems>
            <field>US_Account_Target__c.Acheivement_Score__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>US_Account_Target__c.Account_Target_Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>WSLR_NBR+WSLR_ASGND_CUST_NBR+CHANNEL+BRANDCATEGORY</inlineHelpText>
        <label>External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pct_Acheivement__c</fullName>
        <formula>IF( Achieved_Targets__c &gt;= Program_Target_Level__c, 1, Achieved_Targets__c /  Program_Target_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Acheivement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Target_Level__c</fullName>
        <formula>WSLR_Target_Program__r.Account_Target_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the level set at the WSLR Target level</inlineHelpText>
        <label>Program Target Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Program_Achieved__c</fullName>
        <formula>IF( Achieved_Targets__c &gt;= Program_Target_Level__c, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Program Achieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Program__c</fullName>
        <formula>IF ( Channel__c = &quot;ONP&quot;, &quot;ONP&quot;, IF (Brand_Category__c = &quot;&quot;, Channel__c, Channel__c&amp;&quot; &quot;&amp;Brand_Category__c))</formula>
        <label>Target Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSLR_Target_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WSLR Target Program</label>
        <referenceTo>WSLR_Target_Program__c</referenceTo>
        <relationshipLabel>Account Target Programs</relationshipLabel>
        <relationshipName>Account_Target_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Target Program</label>
    <nameField>
        <displayFormat>ATP-{0000000}</displayFormat>
        <label>Account Target Program Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Target Programs</pluralLabel>
    <recordTypes>
        <fullName>Assortment</fullName>
        <active>true</active>
        <description>Assortment type for Account Targets</description>
        <label>Assortment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>